--- a/package.json
+++ b/package.json
@@ -9,19 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-spring/three": "^9.7.5",
     "@react-spring/web": "^9.7.5",
-    "@react-three/drei": "^9.76.3",
-    "@react-three/fiber": "^8.13.0",
-    "@react-three/postprocessing": "^2.9.0",
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
-    "react-scroll": "^1.9.3",
-    "three": "^0.150.1"
+    "react-scroll": "^1.9.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
