--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.5",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
